testsuite/tests/contrib/lkt_semantic/invalid_grammar/test.lkt
grammar foo {
    @invalid val i: Int = 0
}
